# lept_json

./: .gitignore  CMakeLists.txt  LICENSE  README.md  leptjson.c  leptjson.h  test  test.c
lib/: leptjson.h
src/: leptjson.c  test.c
